--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -50,7 +50,7 @@
    <widget class="QTableWidget" name="tableOperators">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>370</x>
       <y>10</y>
       <width>401</width>
       <height>621</height>
@@ -249,24 +249,11 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="testLbl">
-    <property name="geometry">
-     <rect>
-      <x>880</x>
-      <y>40</y>
-      <width>411</width>
-      <height>431</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QPushButton" name="downlCodeBtn">
     <property name="geometry">
      <rect>
       <x>1080</x>
-      <y>580</y>
+      <y>600</y>
       <width>101</width>
       <height>25</height>
      </rect>
@@ -275,24 +262,11 @@
      <string>download code</string>
     </property>
    </widget>
-   <widget class="QLabel" name="testLbl2">
-    <property name="geometry">
-     <rect>
-      <x>884</x>
-      <y>475</y>
-      <width>401</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QPushButton" name="testBtn">
     <property name="geometry">
      <rect>
-      <x>980</x>
-      <y>610</y>
+      <x>920</x>
+      <y>600</y>
       <width>101</width>
       <height>25</height>
      </rect>
@@ -300,6 +274,42 @@
     <property name="text">
      <string>seek operands</string>
     </property>
+   </widget>
+   <widget class="QScrollArea" name="scrollArea">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>40</y>
+      <width>511</width>
+      <height>551</height>
+     </rect>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOn</enum>
+    </property>
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>492</width>
+       <height>549</height>
+      </rect>
+     </property>
+     <widget class="QTextBrowser" name="testLbl">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>11</y>
+        <width>481</width>
+        <height>531</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
