--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -285,7 +285,7 @@
      </rect>
     </property>
     <property name="verticalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOn</enum>
+     <enum>Qt::ScrollBarAsNeeded</enum>
     </property>
     <property name="widgetResizable">
      <bool>true</bool>
@@ -295,17 +295,17 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>492</width>
+       <width>509</width>
        <height>549</height>
       </rect>
      </property>
-     <widget class="QTextBrowser" name="testLbl">
+     <widget class="QTextEdit" name="testLbl">
       <property name="geometry">
        <rect>
-        <x>5</x>
-        <y>11</y>
-        <width>481</width>
-        <height>531</height>
+        <x>3</x>
+        <y>4</y>
+        <width>501</width>
+        <height>541</height>
        </rect>
       </property>
      </widget>
